--- a/.editorconfig
+++ b/.editorconfig
@@ -111,7 +111,7 @@ csharp_style_namespace_declarations = file_scoped:error
 dotnet_diagnostic.IDE1006.severity = error
 
 # Unused usings
-dotnet_diagnostic.IDE0005.severity = error
+dotnet_diagnostic.IDE0005.severity = suggestion
 
 # CA1848: Use the LoggerMessage delegates
 dotnet_diagnostic.CA1848.severity = none
