--- a/.editorconfig
+++ b/.editorconfig
@@ -128,6 +128,24 @@ dotnet_diagnostic.CA1822.severity = suggestion
 # IDE0080: Remove unnecessary suppression operator
 dotnet_diagnostic.IDE0080.severity = error
 
+# CA1716: Rename namespace "" so that it no longer conflicts with the reserved language keyword 'Interface'
+# TODO: fixing this would be breaking
+dotnet_diagnostic.CA1716.severity = suggestion
+
+# CA1805: Do not initialize unnecessarily
+dotnet_diagnostic.CA1805.severity = suggestion
+
+# CA1711: Identifiers should not have incorrect suffix
+# TODO: fixing this would be breaking
+dotnet_diagnostic.CA1711.severity = suggestion
+
+# CA2201: Do not raise reserved exception types
+dotnet_diagnostic.CA2201.severity = suggestion
+
+# CA1720: Identifier contains type name
+# TODO: fixing this would be breaking
+dotnet_diagnostic.CA1720.severity = suggestion
+
 [Program.cs]
 dotnet_diagnostic.CA1050.severity = none
 dotnet_diagnostic.S1118.severity = none
