--- a/src/Altinn.App.Internal.Analyzers/Altinn.App.Internal.Analyzers.csproj
+++ b/src/Altinn.App.Internal.Analyzers/Altinn.App.Internal.Analyzers.csproj
@@ -27,7 +27,7 @@
   <!-- 
     NOTE:
     InternalsVisibleTo messes with PolySharp, which we use to support newer C# features in analyzer code (such as records)
-    So it is disabled currently and relevant members sin analyzer code is public instead 
+    So it is disabled currently and relevant members in analyzer code are public instead 
    -->
   <!-- <ItemGroup>
     <InternalsVisibleTo Include="Altinn.App.Analyzers.Tests" />
