Associate releases with github environments

--- a/.editorconfig
+++ b/.editorconfig
@@ -152,3 +152,7 @@ dotnet_diagnostic.CA1816.severity = warning
 [Program.cs]
 dotnet_diagnostic.CA1050.severity = none
 dotnet_diagnostic.S1118.severity = none
+
+[*.{yml,yaml}]
+indent_size = 2
+end_of_line = lf
