--- a/.github/workflows/pr-actions.yml
+++ b/.github/workflows/pr-actions.yml
@@ -9,6 +9,7 @@ jobs:
     if: github.event.issue.pull_request && contains(github.event.comment.body, '/publish')
     env:
       DOTNET_HOSTBUILDER__RELOADCONFIGONCHANGE: false
+      NUGET_PACKAGES: ${{ github.workspace }}/.nuget/packages
     steps:
       - name: Setup .NET
         uses: actions/setup-dotnet@67a3573c9a986a3f9c594539f4ab511d57bb3ce9 # v4
@@ -49,21 +50,27 @@ jobs:
 
             > ⚙️ Building...
 
+      - uses: actions/cache@5a3ec84eff668545956fd18022155c47e93e2684 # v4.2.3
+        with:
+          path: ${{ github.workspace }}/.nuget/packages
+          key: ${{ runner.os }}-nuget-${{ hashFiles('**/packages.lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-nuget-
+
+      - name: Restore
+        run: dotnet restore -v m -p:Deterministic=true -p:BuildNumber=${{ github.run_number }}
+
       - name: Build
-        run: |
-          dotnet build -v m -c Release -p:Deterministic=true -p:BuildNumber=${{ github.run_number }}
+        run: dotnet build -v m --no-restore -c Release -p:Deterministic=true -p:BuildNumber=${{ github.run_number }}
+
       - name: Test
-        run: |
-          dotnet test -v m --no-restore --no-build -c Release
+        run: dotnet test -v m --no-restore --no-build -c Release
+
       - name: Pack PR release
-        run: |
-          dotnet pack -v m --no-restore --no-build -c Release -p:Deterministic=true -p:BuildNumber=${{ github.run_number }}
-      - name: Versions
-        run: |
-          dotnet --version
+        run: dotnet pack -v m --no-restore --no-build -c Release -p:Deterministic=true -p:BuildNumber=${{ github.run_number }}
+
       - name: Publish PR release
-        run: |
-          dotnet nuget push src/**/bin/Release/*.nupkg --source https://api.nuget.org/v3/index.json --api-key ${{ secrets.NUGET_API_KEY }} --skip-duplicate
+        run: dotnet nuget push src/**/bin/Release/*.nupkg --source https://api.nuget.org/v3/index.json --api-key ${{ secrets.NUGET_API_KEY }} --skip-duplicate
 
       - name: Update PR comment - failure
         uses: peter-evans/create-or-update-comment@71345be0265236311c031f5c7866368bd1eff043 # v4
